# sfml3d

./: CMakeLists.txt  README.md  main.cpp  todo.md
include/: camera3d.hpp  flatrect3d.hpp  point3d.hpp  voxel.hpp
src/: camera3d.cpp  camera3d.hpp  main.cpp  object3d.hpp  voxel.cpp  voxel.hpp
